--- a/themes/minima/layout/post.ejs
+++ b/themes/minima/layout/post.ejs
@@ -1,5 +1,12 @@
-  <h2><%- page.title %></h2>
+<h2>
+  <%- page.title %>
+</h2>
 
-  <%- page.content%>
-  <p><%- list_tags(page.tags, {class: 'classtest', show_count: false, style: false}) %> — <%- full_date(page.date, 'll') %></p>
-  <%- partial('partial/comments') %>
+<p>
+  <%- list_tags(page.tags, {class: 'classtest' , show_count: false, style: false}) %>
+   — <%- full_date(page.date, 'll' ) %> %>
+</p>
+
+<%- page.content%>
+<%- partial('partial/comments') %>
+
