--- a/themes/minima/layout/post.ejs
+++ b/themes/minima/layout/post.ejs
@@ -7,9 +7,9 @@
 <blockquote>
   <p>
     <%- list_tags(page.tags, {class: 'classtest' , show_count: false, style: false}) %>
-      —  Last updated on <%- full_date(page.date, 'll' ) %> by <%- config.author %>.%>
+      —  <%- __('LastUpdatedOn') %> <%- full_date(page.updated, 'll' ) %>%>
   </p>
-  This article is posted under CC BY-NC-SA license.
+  <%- __('License') %>: CC BY-NC-SA
   <a class="icon" href="https://creativecommons.org/licenses/by-nc-sa/4.0/deed.en" target="_blank" rel="noreferrer" aria-label="by-nc-sa">
     <img style="margin-bottom: 0;" class="svg-hov" src="<%- theme.cc %>" width="65"/>
   </a> 
