--- a/themes/minima/layout/tag.ejs
+++ b/themes/minima/layout/tag.ejs
@@ -9,7 +9,7 @@
     }
 %>
 <% if(title) { %>
-   <h3>Posts Related to — <%- title %></h3>
+   <h3><%- __('PostsRelatedTo') %> — <%- title %></h3>
 <% } %>
 <% page.posts.each(function(item){ %>
 
